# CppUTest-Test-Adapter

./: .gitignore  .mocharc.json  .vscodeignore  CMakeLists.txt  README.md  cpputest-test-adapter-1.3.4.vsix  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: do_release.yml  gitversion.yml  unit_tests.yml
src/: CppUTestAdapter2.ts  CppUTestContainer.ts  CppUTestGroup.ts  CppUTestGroupFactory.ts  CppUTestImplementation.ts  DebugInformation.ts  ExecutableRunner.ts  RegexResultParser.ts  SettingsProvider.ts  TestResolver.ts  TestState.ts  adapter.ts  cpputest.ts  legacyWrapper.ts  main.ts
src/Application/: NodeProcessExecuter.ts  ProcessExecuter.ts  VscodeAdapterImplementation.ts  VscodeLogger.ts
src/Domain/: CppUTest.ts  CppUTestContainer.ts  CppUTestGroup.ts  CppUTestSuite.ts  Logger.ts  RegexResultParser.ts  ResultParser.ts  TestInfo.ts  TestResult.ts  TestSuiteInfo.ts  uuid.ts
src/Infrastructure/: ExecutableRunner.ts  IDebugConfiguration.ts  IWorkspaceConfiguration.ts  IWorkspaceFolder.ts  Infrastructure.ts  SettingsProvider.ts  TestLocationFetchMode.ts  VscodeAdapter.ts  VscodeSettingsProvider.ts
test/: basicTests.cpp  secondTests.cpp
tests/: CppUTest.spec.ts  CppUTestContainer.spec.ts  CppUTestGroup.spec.ts  CppUTestGroupFactory.spec.ts  CppUTestSuite.spec.ts  ExecutableRunner.spec.ts  RegexResultParser.spec.ts  SettingsProvider.spec.ts  testResults.json
